# mbc-bench

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  do_cmake.sh
include/: common.h  compressor.hpp  decompressor.hpp  filer.hpp
patches/: zdict.patch
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_compression.cpp  test_filer.cpp
